# cocottelang

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCS.md  DOCS.md.old  README.md
next/: DOCS.md  (+2 more)
next/cocottelang-stdlib/: CHANGELOG.md  Cargo.toml  Charlotfile  DOCS.md  Makefile  Millet.toml  README.md  ROADMAP.md  SKILL.md  justfile
next/cocottelang-stdlib/compat/bsd/: dummy.rs
next/cocottelang-stdlib/compat/chromeos/: dummy.rs
next/cocottelang-stdlib/compat/macos/: dummy.rs
next/cocottelang-stdlib/compat/windows/: dummy.rs
next/cocottelang-stdlib/compiler/stdlib/: modules_list.cot
next/cocottelang-stdlib/compiler/stdlib/args/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/assert/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/base64/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/cache/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/cli/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/collections/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/config/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/csv/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/dates/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/deque/: module.cotlib
next/cocottelang-stdlib/compiler/stdlib/docker/: module.cotlib
next/cocottelang-stdlib/demos/: native_demo.cot
next/cocottelang-stdlib/docs/: modules.md
next/cocottelang-stdlib/src/: charlotte.rs  codegen.rs  environment.rs  interpreter.rs  main.rs  modules.rs  native_codegen.rs  package_manager.rs  parser.rs  value.rs
next/cocottelang-stdlib/src/stdlib/: ai.cotlib  clipboard.cotlib  color_utils.cotlib  colors.cotlib  complex.cotlib  crypto.cotlib  db.cotlib  dotenv.cotlib  events.cotlib  fmt.cotlib  fs.cotlib  functional.cotlib  git.cotlib  graph.cotlib  hash.cotlib  image.cotlib  ini.cotlib  iter.cotlib  logging.cotlib  middleware.cotlib  notify.cotlib  passwords.cotlib  random.cotlib  rate_limit.cotlib  set.cotlib  sort.cotlib  stack.cotlib  state.cotlib  statistics.cotlib  strings.cotlib  terminal.cotlib  text.cotlib  units.cotlib  uuid.cotlib
next/cocottelang-stdlib/tests/: stdlib_test.cot  test_collections.cot
next/next-next/: Cargo.toml
next/next-next/src/: charlotte.rs  interpreter.rs  modules.rs
(+75 files in other folders)
