[package]
name = "cocotte"
version = "0.1.0"
edition = "2021"
description = "The Cocotte programming language compiler and interpreter"

[[bin]]
name = "cocotte"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.3.24", features = ["derive"] }
toml = "=0.7.8"
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.96"
colored = "2"
rustyline = "=11.0.0"
dirs = "5"
indexmap = "=2.0.2"

[profile.release]
opt-level = 3
lto = true
