[package]
name        = "cocotte"
version     = "0.3.1"
edition     = "2021"
description = "The Cocotte programming language compiler and interpreter"
license     = "MIT OR Apache-2.0"

[[bin]]
name = "cocotte"
path = "src/main.rs"

[dependencies]
clap        = { version = "=4.3.24", features = ["derive"] }
toml        = "=0.7.8"
serde       = { version = "=1.0.196", features = ["derive"] }
serde_json  = "=1.0.113"
colored     = "=2.1.0"
dirs        = "=4.0.0"
indexmap    = "=2.2.2"
ureq        = { version = "=2.6.2", features = ["json"] }
rusqlite    = { version = "=0.31.0", features = ["bundled"] }
rayon       = "=1.5.3"
eframe      = { version = "=0.27.2", optional = true, features = ["wgpu", "glow"] }
egui        = { version = "=0.27.2", optional = true }

[features]
default = ["gui"]
gui     = ["eframe", "egui"]
no-gui  = []

[profile.release]
opt-level = 3
lto       = true
strip     = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug     = true
